fix: replace chinese font with japanese font

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -5,7 +5,7 @@ html {
 
 body {
 	color: rgba(0, 0, 0, 0.5);
-	font-family: 'PingHei', 'PingFang SC', Helvetica Neue, 'Work Sans', 'Hiragino Sans GB', 'Microsoft YaHei', SimSun, sans-serif;
+	font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Hiragino Kaku Gothic ProN,Hiragino Sans,ヒラギノ角ゴ ProN W3,Arial,メイリオ,Meiryo,sans-serif;
 	font-size: 15px;
 	width: 100%;
 	margin: 0 auto 30px auto;
