--- a/source/css/blog_basic.css
+++ b/source/css/blog_basic.css
@@ -41,7 +41,7 @@
 pre {
   font-size: 15px;
   background-color: #f0f0f0!important;
-  font-family: 'Roboto Mono','Lucida Console','Trebuchet MS','Courier New', Monaco, courier,'PingFang SC','Hiragino Sans GB','Microsoft Jhenghei','Microsoft YaHei', monospace!important
+  font-family: 'Roboto Mono','Lucida Console','Trebuchet MS','Courier New', Monaco, courier,'Microsoft Jhenghei','Microsoft Meiryo', monospace!important
 }
 
 figure.highlight {
@@ -487,7 +487,7 @@ dl dt {
         text-decoration: none; }
         #fb_new_comment .c_button, #fb_new_comment #c_submit {
           cursor: pointer;
-          font-family: "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+          font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Hiragino Kaku Gothic ProN,Hiragino Sans,ヒラギノ角ゴ ProN W3,Arial,メイリオ,Meiryo,sans-serif
           font-size: 1em;
           line-height: 1.3em;
           letter-spacing: 1px;
