feat: add twitter and facebook

--- a/layout/partial/sidebar.pug
+++ b/layout/partial/sidebar.pug
@@ -26,4 +26,14 @@
       li
         a(href=theme.zhihu)
           i.fa.fa-mortar-board
+
+    if theme.twitter
+      li
+        a(href=theme.twitter)
+          i.fa.fa-twitter-square
+
+    if theme.facebook
+      li
+        a(href=theme.facebook)
+          i.fa.fa-facebook-square
   include footer
