fix: default language

--- a/layout/partial/footer.pug
+++ b/layout/partial/footer.pug
@@ -6,7 +6,7 @@
 
   .by_farbox
     span Powered by 
-    a(href="https://hexo.io/zh-cn/", target="_blank") Hexo 
+    a(href="https://hexo.io/", target="_blank") Hexo 
     span  & 
     a(href="https://github.com/mrcore/hexo-theme-Anatole-Core", target="_blank") Anatole-Core  
   //- .beian
