--- a/layout/page.pug
+++ b/layout/page.pug
@@ -2,9 +2,9 @@ extends partial/layout
 
 block site_title
     if is_current('tags')
-        !=  "标签 · " + config.title
+        !=  "ラベル: " + config.title
     else
-        != page.title + " · " + config.title
+        != page.title + ": " + config.title
 
 block description
     - var desc = page.desc || strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150);
