--- a/layout/partial/nav.pug
+++ b/layout/partial/nav.pug
@@ -1,6 +1,10 @@
 .page-top.animated.fadeInDown
   .search
-    input
+    .text
+      input(placeholder="検索ワードを入力してください")
+    .btn
+      a
+        i.fa.fa-search
   .nav
     li
       if is_home()
