--- a/layout/partial/layout.pug
+++ b/layout/partial/layout.pug
@@ -12,3 +12,4 @@ html(lang="ja-JP")
     script(src= url_for('js/jquery-migrate-1.2.1.min.js'))
     script(src= url_for('js/jquery.appear.js'))
     script(src=url_for("/js/add-bookmark.js"))
+    script(src=url_for("/js/search.js"))
