--- a/layout/partial/nav.pug
+++ b/layout/partial/nav.pug
@@ -1,7 +1,7 @@
 .page-top.animated.fadeInDown
   .search
     .text
-      input(placeholder="検索ワードを入力してください")
+      input(placeholder="検索ワードを入力してください", id="search-text", onkeypress="javascript:search(event)")
     .btn
       a
         i.fa.fa-search
