--- a/layout/partial/head.pug
+++ b/layout/partial/head.pug
@@ -21,5 +21,6 @@ meta(name="renderer",content="webkit")
 link(rel="stylesheet", href= url_for('css/style.css'))
 link(rel="stylesheet", href= url_for('css/blog_basic.css'))
 link(rel="stylesheet", href= url_for('css/font-awesome.min.css'))
+link(rel="stylesheet", href= url_for('css/blogcard.css'))
 link(rel="alternate" type="application/atom+xml" title="ATOM 1.0" href="/atom.xml")
 script(src= url_for('js/jquery.js'))
