--- a/source/css/blogcard.css
+++ b/source/css/blogcard.css
@@ -13,9 +13,8 @@ img {
   position: relative;
   margin: 0;
   padding: 0;
-  box-shadow: 0px 2px 6px rgba(0,0,0,0.8);
   max-width: 500px;
-  border: 1px solid #888;
+  border: 1px solid #bbbbbb;
   background-color: #fff;
 }
 .blog-card .hbc-link-wrap .hbc-link {
@@ -31,7 +30,7 @@ img {
 .blog-card .hbc-link-wrap .hbc-link .hbc-card .hbc-info {
   padding: 0;
   color: #222;
-  font-size: 12px;
+  font-size: 18px;
   white-space: nowrap;
   overflow: hidden;
   display: block !important;
@@ -46,7 +45,7 @@ img {
 }
 .blog-card .hbc-link-wrap .hbc-link .hbc-card .hbc-info .hbc-site-name {
   margin: 0 0 0 6px;
-  color: #222;
+  color: #5F5F5F;
   font-size: 12px;
   line-height: 12px;
   text-decoration: none;
@@ -70,7 +69,7 @@ img {
   flex: 1;
 }
 .blog-card .hbc-link-wrap .hbc-link .hbc-card .hbc-contents .hbc-title {
-  color: #111;
+  color: #5F5F5F;
   font-size: 16px;
   line-height: 24px;
   font-weight: bold;
@@ -78,7 +77,7 @@ img {
   word-break: break-all;
 }
 .blog-card .hbc-link-wrap .hbc-link .hbc-card .hbc-contents .hbc-url {
-  color: #46f;
+  color: #4786D6;
   font-size: 10px;
   font-weight: normal;
   overflow: hidden;
